# pyphyschemtools

./: .LargeFiles  .git_push.swp  .gitignore  .gitignore.bak  .gitignore_base  .pyproject.toml.swp  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Examples.ipynb  Examples_pyPCT.ipynb  MANIFEST.in  README.md  Untitled.ipynb  git_push  log  misc.ipynb  push_pyPi.sh  push_pyPi_doc.md  pyproject.toml  test.ipynb
.ipynb_checkpoints/: Chem3D-checkpoint.py  ML-checkpoint.py  aithermo-checkpoint.py  cheminformatics-checkpoint.py  sympyUtilities-checkpoint.py  tools4pyPhysChem-checkpoint.py  visualID_Eng-checkpoint.py
data_examples/Kinetics/: .~lock.Example4Kord.xlsx#  SuiviKin_BIPS_EtOAc.xlsx
data_examples/Molecules/: betaCD-closed.xyz
dev/chromato/: TP_HPLC_L3_python.ipynb
docs/source/: conf.py  index.rst  modules.rst  pyphyschemtools.rst
docs/source/theory/: Kinetics_KORD.md  Units.md
docs/source/theoryDocs/: Chem3D.md  Kinetics.md  Nano.md  OrgaChem.md  QuantumChemCorner.md  Spectra.md  Spectro.md  pipManagement.md
pyphyschemtools/: .readthedocs.yaml  Chem3D.py  ML.py  PeriodicTable.py  Untitled.ipynb  __init__.py  aithermo.py  cheminformatics.py  core.py  kinetics.py  misc.py  nano.py  orgachem.py  spectra.py  spectro.py  survey.py  sympyUtilities.py  tools4AS.py  units.py  visualID_Eng.py
pyphyschemtools/data_examples/Kinetics/: Example4Kord.xlsx  SuiviKin_BIPS_EtOAc.csv  TestKORD.xlsx
pyphyschemtools/data_examples/QCCorner/: tools4G16-Examples.tar.bz2
pyphyschemtools/data_examples/Spectra/: calib_chromato.ods
pyphyschemtools/quantumChem_corner/: GScan_Analyzis.py  cif2pos.py  pos2cif.py  pos2xxx.py  wrappers.py
pyphyschemtools/quantumChem_corner/bash_scripts/: GP2bw  GParser  ReadIterVASP.py  RestartVASP  VASPcv  cleanVASPf  cpG  cpVASP  hVASP
pyphyschemtools/resources/orgachem/: Functions.csv  Functions_Examples.csv  Molecules.csv
pyphyschemtools/utils/: pipManagement.py  pipManagement_202507_dev.py
tools4pyPhysChem/: PeriodicTable.py  __init__.py  cheminformatics.py  kinetics.py  spectra.py  survey.py  tools4AS.py
tools4pyPhysChem/resources/svg/: Thumbs.db
