[project]
name = "pyphyschemtools"
version = "0.5.7"
description = "A comprehensive Python toolbox for physical chemistry and cheminformatics"
authors = [{name = "Romuald POTEAU, LPCNO", email = "romuald.poteau@utoulouse.fr"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ase",
    "bokeh",
    "CageCavityCalc",
    "ipywidgets",
    "jupyter",
    "keras",
    "matplotlib",
    "mendeleev",
    "numpy",
    "openpyxl",
    "pandas",
    "Pillow",
    "pubchempy",
    "py3Dmol",
    "qrcode",
    "rdkit",
    "scikit-learn",
    "scipy",
    "sympy",
    "tensorflow"
]

[project.urls]
Repository = "https://github.com/rpoteau/pyphyschemtools"
Changelog = "https://github.com/rpoteau/pyphyschemtools/blob/main/CHANGELOG.md"
Documentation = "https://pyphyschemtools.readthedocs.io/en/latest/"
Issues = "https://github.com/rpoteau/pyphyschemtools/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyphyschemtools*"]

[tool.setuptools.package-data]
"pyphyschemtools" = [
    "resources/**/*",
    "data_examples/**/*",
    "example.ipynb",
]

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "myst-parser",
  "nbsphinx",
  "ipykernel",
  "pandoc",
  "numpydoc",
  "sphinx-copybutton"
]


